--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.74.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -23,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^12.1.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
